--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 .header {
   padding: 60px;
   text-align: center;
-  background: #F9EBEA;
-  color: white;
+  background:red;
+  color: yellow;
   font-size: 30px;
 }
 </style>
